2013-06-07  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-mode): Set comment-use-global-state
	to t.  (Bug#14303)

	* newcomment.el (comment-search-backward): Revert last change.
	(Bug#14434)

	* emacs-lisp/smie.el (smie--matching-block-data): Minor simplification.

2013-06-07  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (TAGS TAGS-LISP): Pass the (long) list of *.el files
	through xargs, to avoid failure due to MS-Windows limitations on
	command-line length.

2013-06-06  Glenn Morris  <rgm@gnu.org>

	* font-lock.el (lisp-font-lock-keywords-2):
	Treat user-error like error.

	* emacs-lisp/bytecomp.el (byte-compile-char-before)
	(byte-compile-backward-char, byte-compile-backward-word):
	Handle explicit nil arguments.  (Bug#14565)

2013-06-05  Alan Mackenzie  <acm@muc.de>

	* isearch.el (isearch-allow-prefix): New user option.
	(isearch-other-meta-char): Don't exit isearch when a prefix
	argument is typed whilst `isearch-allow-prefix' is non-nil.
	(Bug#9706)

2013-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autorevert.el (auto-revert-notify-handler): Use memq.
	Hide assertion failure.

	* skeleton.el: Use cl-lib.
	(skeleton-further-elements): Use defvar-local.
	(skeleton-insert): Use cl-progv.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/prog-mode.el (prog-prettify-symbols)
	(prog-prettify-install): Update docstrings.

2013-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el: Move all the prog-mode code to prog-mode.el.
	* progmodes/prog-mode.el: New file.
	* loadup.el: Add prog-mode.el.

2013-06-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* simple.el (prog-prettify-symbols): Add version.
	(prog-prettify-install): Add convenience function to prettify symbols.

	* progmodes/perl-mode.el (perl--augmented-font-lock-keywords)
	(perl--augmented-font-lock-keywords-1)
	(perl--augmented-font-lock-keywords-2, perl-mode): Remove unneeded
	variables and use it.
